cmd/rule-parser/y.output

state 0
	$accept: .rules $end 
	rules: .    (2)

	.  reduce 2 (src line 86)

	rules  goto 1

state 1
	$accept:  rules.$end 
	rules:  rules.rule 

	$end  accept
	ACTION_IDENTIFIER  shift 3
	.  error

	rule  goto 2

state 2
	rules:  rules rule.    (1)

	.  reduce 1 (src line 85)


state 3
	rule:  ACTION_IDENTIFIER.PROTO_IDENTIFIER network_range port_range ARROW network_range port_range 

	PROTO_IDENTIFIER  shift 4
	.  error


state 4
	rule:  ACTION_IDENTIFIER PROTO_IDENTIFIER.network_range port_range ARROW network_range port_range 

	ANY_KEYWORD  shift 8
	IPV4_RANGE  shift 6
	IPV6_RANGE  shift 7
	.  error

	network_range  goto 5

state 5
	rule:  ACTION_IDENTIFIER PROTO_IDENTIFIER network_range.port_range ARROW network_range port_range 

	ANY_KEYWORD  shift 11
	PORT_RANGE  shift 10
	.  error

	port_range  goto 9

state 6
	network_range:  IPV4_RANGE.    (16)

	.  reduce 16 (src line 131)


state 7
	network_range:  IPV6_RANGE.    (17)

	.  reduce 17 (src line 132)


state 8
	network_range:  ANY_KEYWORD.    (18)

	.  reduce 18 (src line 133)


state 9
	rule:  ACTION_IDENTIFIER PROTO_IDENTIFIER network_range port_range.ARROW network_range port_range 

	ARROW  shift 12
	.  error


state 10
	port_range:  PORT_RANGE.    (19)

	.  reduce 19 (src line 136)


state 11
	port_range:  ANY_KEYWORD.    (20)

	.  reduce 20 (src line 137)


state 12
	rule:  ACTION_IDENTIFIER PROTO_IDENTIFIER network_range port_range ARROW.network_range port_range 

	ANY_KEYWORD  shift 8
	IPV4_RANGE  shift 6
	IPV6_RANGE  shift 7
	.  error

	network_range  goto 13

state 13
	rule:  ACTION_IDENTIFIER PROTO_IDENTIFIER network_range port_range ARROW network_range.port_range 

	ANY_KEYWORD  shift 11
	PORT_RANGE  shift 10
	.  error

	port_range  goto 14

state 14
	rule:  ACTION_IDENTIFIER PROTO_IDENTIFIER network_range port_range ARROW network_range port_range.    (3)

	.  reduce 3 (src line 90)

Rule not reduced: expr:  '(' expr ')' 
Rule not reduced: expr:  expr '+' expr 
Rule not reduced: expr:  expr MINUS expr 
Rule not reduced: expr:  expr ASTERISK expr 
Rule not reduced: expr:  expr SLASH expr 
Rule not reduced: expr:  expr '%' expr 
Rule not reduced: expr:  expr '&' expr 
Rule not reduced: expr:  expr '|' expr 
Rule not reduced: expr:  '-' expr 
Rule not reduced: expr:  number 
Rule not reduced: number:  INTEGER 
Rule not reduced: number:  number INTEGER 
Rule not reduced: port_number:  number 

35 terminals, 8 nonterminals
22 grammar rules, 15/16000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
57 working sets used
memory: parser 5/240000
2 extra closures
13 shift entries, 1 exceptions
9 goto entries
-3 entries saved by goto default
Optimizer space used: output 21/240000
21 table entries, 7 zero
maximum spread: 27, maximum offset: 22
